# dist-storage

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  README.md
.cursor/rules/: agents-md.mdc
common/crypto/: CMakeLists.txt  auth.cc  auth.h  call_check.h  sgn.cc  sgn.h  ssl.cc  ssl.h
common/grpc/: CMakeLists.txt  addr.cc  addr.h  callback.h  endpoint.h  engine.cc  engine.h  loop.cc  loop.h  ref_counted_arg.h  resolver.cc  resolver.h  resolver_factory.cc  resolver_factory.h  ssl_endpoint.cc  ssl_endpoint.h
common/net/: call_check.cc  call_check.h  tcpv4.cc  tcpv4.h
common/peer/: CMakeLists.txt  message.cc  message.h  store.cc  store.h
common/proto/: CMakeLists.txt  Makefile  auth.proto  data.proto  limit.proto  message.proto  minion.proto  net.proto  obj_store.proto  query.proto  resource.proto  route.proto  tracker.proto
common/query/: CMakeLists.txt  parse_query.cc  parse_query.h
common/storage/: block.cc  block.h  idx_hash_dynamic.cc  idx_hash_dynamic.h  idx_sort_dynamic.cc  idx_sort_dynamic.h  idx_sort_static.cc  idx_sort_static.h
common/utils/: cache.h  defs.h  err.h  exception.cc  exception.h  grpc_callback.h  grpc_loop.h  guard_ptr.h  poll_engine.cc  poll_engine.h  ref_count_obj.h  stats.h  sys_call_check.cc  task_runner.h  unique_fd.h
common/utils/sys/: call_check.cc  call_check.h  err.cc  socket.cc  socket.h
minion/message/: CMakeLists.txt  message.cc  message_send.cc  message_send.h  message_stream.cc  message_stream.h  recipient_dispatch.cc  recipient_dispatch.h  stream_router.cc  stream_router.h  tell_my_addr.cc  tell_my_addr.h
minion/obj_store/: CMakeLists.txt  obj_store.cc
minion/planner/parse/: CMakeLists.txt  parse_query.cc
minion/planner/parse/grammar/: sql.g4
minion/planner/query/: graph.h  rules.h
minion/resource_guard/: CMakeLists.txt  resource_guard.cc
